twitter icons, twitter link

--- a/src/partials/_module-article-puff.html
+++ b/src/partials/_module-article-puff.html
@@ -1,12 +1,13 @@
 <div class="module article-puff debug">
     <div class="header">
         <h2>Lower East - Fusce vehicula dolor arcu. Cras quis nulla commodo, aliquam lectus sed...</h2>
-        <img src="http://placeimg.com/478/312/people" alt="">
+        <figure><img src="http://placeimg.com/478/312/people" alt=""></figure>
     </div>
     <div class="content">
         <div>
             <time datetime="2014-10-13">13 okt 2014</time>
         </div> 
-        <div>Cras quis nulla commodo, aliquam lectus sed, blandit augue. Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae ligula vel ornare...</div>
+        <div>Cras quis nulla commodo, aliquam lectus sed, blandit augue. 
+            Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae ligula vel ornare...</div>
     </div>
 </div>
