--- a/src/partials/_layout-grid.html
+++ b/src/partials/_layout-grid.html
@@ -1,34 +1,34 @@
 <div class="layout grid debug">
 
-    <div class="">
+    <div>
         @@include('./partials/_module-article-puff.html')
     </div>
     
-    <div class="">
+    <div>
         @@include('./partials/_module-article-puff.html')
     </div>
 
-    <div class="">
+    <div>
         @@include('./partials/_module-article-puff.html')
     </div>
     
-    <div class="">
+    <div>
         @@include('./partials/_module-article-puff.html')
     </div>
 
-    <div class="">
+    <div>
         @@include('./partials/_module-article-puff.html')
     </div>
     
-    <div class="">
+    <div>
         @@include('./partials/_module-article-puff.html')
     </div>
 
-    <div class="">
+    <div>
         @@include('./partials/_module-article-puff.html')
     </div>
     
-    <div class="">
+    <div>
         @@include('./partials/_module-article-puff.html')
     </div>
     
