--- a/src/partials/_module-author.html
+++ b/src/partials/_module-author.html
@@ -10,7 +10,7 @@
     <div class="content">
         Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae. Donec sagittis faucibus lacus eget blandit. 
         <div class="social">
-            <a href="">[[ICON]] @JesRasmussen</a>
+            <a href=""><img src="img/twitter-icon-16.png" alt="">@JesRasmussen</a>
         </div>
     </div>
     
