--- a/src/partials/_module-quote.html
+++ b/src/partials/_module-quote.html
@@ -1,4 +1,12 @@
 
-<div class="module quote debug">
-    Quote
+<div class="module quote">
+    <div class="quotechar">”</div>
+    <div class="quote">
+        In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. 
+        Integer et elit eget elit facilisis tristique. Nam vel iaculis mauris. 
+        Sed ullamcorper tellus erat, non ultrices sem tincidunt euismod. 
+        Fusce rhoncus porttitor velit, eu bibendum nibh aliquet vel. 
+        Fusce lorem leo, vehicula at nibh quis, facilisis accumsan turpis.”
+    </div>
+    
 </div>
