--- a/src/sass/_module-author.scss
+++ b/src/sass/_module-author.scss
@@ -38,6 +38,7 @@
       z-index: 0;
     }
   }
+
   img.portrait { //portrait
     width: 70px;
     height: 70px;
@@ -50,7 +51,28 @@
 
   .content {
     padding: 50px 20px 20px 20px;
+    font-size: 14px;
+    color: #454545;
+    line-height: 20px;
   }
 
+  .social {
+    margin-top: 20px;
+    a {
+      
+      font-size: 12px;
+      color: #FF7611;
+      line-height: 14px;
+      text-decoration: none;
+    }
+    
+/* @JesRasmussen: */
+    img {
+      margin-top: -2px;
+      margin-right: 8px;
+      vertical-align: middle;
+    }
+
+  }
 
 }
