--- a/src/partials/_module-article-puff.html
+++ b/src/partials/_module-article-puff.html
@@ -1,7 +1,7 @@
-<div class="module article-puff debug">
+<div class="module article-puff">
     <div class="header">
         <h2>Lower East - Fusce vehicula dolor arcu. Cras quis nulla commodo, aliquam lectus sed...</h2>
-        <figure><img src="http://placeimg.com/478/312/people" alt=""></figure>
+        <figure><img src="http://placeimg.com/478/312/arch" alt=""></figure>
     </div>
     <div class="content">
         <div>
