--- a/src/partials/_module-author.html
+++ b/src/partials/_module-author.html
@@ -1,4 +1,4 @@
-<div class="module author debug">
+<div class="module author">
 
     <div class="header">
         <h2>Jes Rasmussen</h2>
@@ -10,7 +10,7 @@
     <div class="content">
         Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae. Donec sagittis faucibus lacus eget blandit. 
         <div class="social">
-            <a href=""><img src="img/twitter-icon-16.png" alt="">@JesRasmussen</a>
+            <a href="https://twitter.com/intent/user?screen_name=JesRasmussen"><img src="img/twitter-icon-16.png" alt="">@JesRasmussen</a>
         </div>
     </div>
     
