--- a/src/sass/_module-article-puff.scss
+++ b/src/sass/_module-article-puff.scss
@@ -1,57 +1,53 @@
 .module.article-puff {
+    position: relative;
     margin: 10px auto 0;
-
-    width: 320px;
-    @include mq(smallscreens) {
-        width: 478px;
-    }
-
-    &:hover {
-        .header figure { 
-            opacity: 1;
-            img {
-                -webkit-transform:scale(1.15);
-                -moz-transform:scale(1.15);
-                -ms-transform:scale(1.15);
-                -o-transform:scale(1.15);
-                transform:scale(1.15);
-            }
-        }
-    }
-    border-radius: 5px;
-    box-shadow: 2px 2px 3px 0px rgba(240,240,240,0.75);
     background-color: rgba(255,255,255,1);
-    border: 1px solid rgba(240,240,240,1);
     font-family: "Arial", sans-serif;
     font-weight: 400;
     font-size: 14px;
     margin-bottom: 20px;
     color: rgba(78,78,78,1);
+    box-shadow: 2px 2px 3px 0px rgba(240,240,240,0.75);
+    border: 1px solid rgba(240,240,240,1);
+    border-radius: 4px;
+    overflow: hidden;
+    transform: translateZ(0);
+    backface-visibility: hidden;
+    width: 320px;
 
+    
+    @include mq(smallscreens) {
+        width: 478px;
+    }
+    
+    &:hover {
+        .header figure { 
+            opacity: 1;
+            img {                
+                transform: scale(1.15);
+            }
+        }
+    }
+    
     .header {
+        position: relative;
         text-align: left;
         display: block;
         height: 208px;
+        background-color: rgba(0,0,0,1);
+        color: rgba(255,255,255,1);
+        overflow: hidden;
+
         @include mq(smallscreens) {
             height: 312px;
         }
-        
-        background-color: rgba(0,0,0,1);
-        position: relative;
-        color: rgba(255,255,255,1);
-
-        overflow: hidden;
-        border-radius: 5px 5px 0 0;
+    
         figure {
             width: 100%;
             transition: opacity 0.2s linear;
             opacity: 0.7;
             img {
-                -webkit-transition: all 0.5s ease;
-                -moz-transition: all 0.5s ease;
-                -ms-transition: all 0.5s ease;
-                -o-transition: all 0.5s ease;
-                transition: all 0.5s ease;
+                transition: transform 0.5s ease;
                 position: absolute;
                 left: 0;
                 width: 100%;
@@ -61,6 +57,7 @@
         }
 
         h2 {
+            color: rgba(255,255,255,1);
             font-size: 24px;
             position: absolute;
             bottom: 0;
@@ -73,11 +70,13 @@
 
     }
     .content {
-        height: 145px;
+        padding: 20px;
+        height: 165px;
+
         @include mq(smallscreens) {
-            height: 70px;
+            height: 100px;
         }
-        margin: 20px;
+        
         > div {
             display: inline-block;
             float: left;
@@ -93,6 +92,7 @@
                 background-color: rgba(245,245,245,1);
             }
 
+
         }
         > div + div {
             text-align: left;
@@ -103,7 +103,11 @@
                 width: 360px;
             }
             margin-right: 0;
+
         }
 
+
+
     }
+    
 }
